add maven plugins for MC module